--- a/bump/workflows/sphinx.yml
+++ b/bump/workflows/sphinx.yml
@@ -29,7 +29,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: "{% raw %}${{ steps.deployment.outputs.page_url }}{% endraw %}"
+      url: {% raw %}${{ steps.deployment.outputs.page_url }}{% endraw %}
     runs-on: ubuntu-latest
     needs: build
     steps:
