--- a/renovate.json
+++ b/renovate.json
@@ -15,6 +15,9 @@
     "fileMatch": ["^template/.github/workflows/*"]
   },
   "pre-commit": {
-    "fileMatch": ["^template/*.pre-commit-config.yaml*"]
+    // "fileMatch": ["^template/*.pre-commit-config.yaml*"]
+    "fileMatch": [
+      "template/{% if not override_precommit %}.pre-commit-config.yaml{% endif %}.jinja"
+    ]
   }
 }
