--- a/renovate.json
+++ b/renovate.json
@@ -15,6 +15,6 @@
     "fileMatch": ["^template/\\.github/workflows/*"]
   },
   "pre-commit": {
-    "fileMatch": ["^template/\\.pre-commit-config\\.yaml$"]
+    "fileMatch": ["^bump/\\.pre-commit-config\\.yaml$"]
   }
 }
