--- a/.github/workflows/bump_precommit.yml
+++ b/.github/workflows/bump_precommit.yml
@@ -2,6 +2,9 @@ name: bump_precommit
 
 on:
   workflow_dispatch:
+  pull_request:
+    branches: [main]
+    paths: [bump/.pre-commit-config.yaml]
   push:
     branches: [main]
     paths: [bump/.pre-commit-config.yaml]
