--- a/.github/workflows/bump_precommit.yml
+++ b/.github/workflows/bump_precommit.yml
@@ -1,23 +1,23 @@
-name: bump_precommit
+name: "bump_precommit"
 
 on:
   workflow_dispatch:
   pull_request:
-    branches: [main]
-    paths: [bump/.pre-commit-config.yaml]
+    branches: ["main"]
+    paths: ["bump/.pre-commit-config.yaml"]
   push:
-    branches: [main]
-    paths: [bump/.pre-commit-config.yaml]
+    branches: ["main"]
+    paths: ["bump/.pre-commit-config.yaml"]
 
 jobs:
   bump:
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-latest"
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: "actions/checkout@v3"
+      - uses: "actions/setup-python@v4"
         with:
           python-version: "3.10"
-      - run: python bump/precommit.py
-      - uses: stefanzweifel/git-auto-commit-action@v4.16.0
+      - run: "python bump/precommit.py"
+      - uses: "stefanzweifel/git-auto-commit-action@v4.16.0"
         with:
-          commit_message: Bump dependencies
+          commit_message: "Bump dependencies"
