--- a/.github/workflows/check_installable.yml
+++ b/.github/workflows/check_installable.yml
@@ -1,20 +1,20 @@
-name: check_installable
+name: "check_installable"
 
 on:
   workflow_dispatch:
   push:
-    branches: [main]
+    branches: ["main"]
   pull_request:
     branches: ["main"]
 
 jobs:
   job:
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-latest"
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: "actions/checkout@v3"
+      - uses: "actions/setup-python@v4"
         with:
           python-version: "3.10"
-      - run: pip install -U pip setuptools wheel
-      - run: touch template/.tools/requirements/requirements_project.txt
-      - run: pip install -r template/.tools/requirements/requirements_cicd.txt
+      - run: "pip install -U pip setuptools wheel"
+      - run: "touch template/.tools/requirements/requirements_project.txt"
+      - run: "pip install -r template/.tools/requirements/requirements_cicd.txt"
