--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: "check_installable"
+name: "main"
 
 on:
   workflow_dispatch:
@@ -8,13 +8,24 @@ on:
     branches: ["main"]
 
 jobs:
+  bump_precommit:
+    runs-on: "ubuntu-latest"
+    steps:
+      - uses: "actions/checkout@v3"
+      - uses: "actions/setup-python@v4"
+        with:
+          python-version: "3.11"
+      - run: "python bump/precommit.py"
+      - uses: "stefanzweifel/git-auto-commit-action@v4.16.0"
+        with:
+          commit_message: "Bump dependencies"
   job:
     runs-on: "ubuntu-latest"
     steps:
       - uses: "actions/checkout@v3"
       - uses: "actions/setup-python@v4"
         with:
-          python-version: "3.10"
+          python-version: "3.11"
       - run: "pip install -U pip setuptools wheel"
       - run: "touch template/.tools/requirements/requirements_project.txt"
       - run: "pip install -r template/.tools/requirements/requirements_cicd.txt"
