--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           commit_message: "Bump dependencies"
   job:
+    needs: "bump_precommit"
     runs-on: "ubuntu-latest"
     steps:
       - uses: "actions/checkout@v3"
