--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
     outputs:
       bump_precommit: "${{ steps.filter.outputs.bump_precommit }}"
     steps:
+      - uses: "actions/checkout@v3"
       - uses: "dorny/paths-filter@v2"
         id: "filter"
         with:
