--- a/renovate.json
+++ b/renovate.json
@@ -6,6 +6,7 @@
     ":preserveSemverRanges",
     ":enablePreCommit"
   ],
+  "gitIgnoredAuthors": ["github-actions"],
   "automerge": true,
   "enabledManagers": ["pip_requirements", "github-actions", "pre-commit"],
   "pip_requirements": {
