--- a/renovate.json
+++ b/renovate.json
@@ -6,7 +6,9 @@
     ":preserveSemverRanges",
     ":enablePreCommit"
   ],
-  "gitIgnoredAuthors": ["action@github.com"],
+  "gitIgnoredAuthors": [
+    "41898282+github-actions[bot]@users.noreply.github.com"
+  ],
   "automerge": true,
   "enabledManagers": ["pip_requirements", "github-actions", "pre-commit"],
   "pip_requirements": {
