Try to echo the GitHub Actions bot user email address

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
       - uses: "stefanzweifel/git-auto-commit-action@v4.16.0"
         with:
           commit_message: "Bump dependencies"
+      - run: "git config user.email"
   job:
     needs: "bump_precommit"
     if: "${{ always() }}"
