--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
       - uses: "stefanzweifel/git-auto-commit-action@v4"
         with:
           commit_message: "Bump dependencies"
-  job:
+  test_installable:
     needs: "bump_precommit"
     if: "${{ always() }}"
     runs-on: "ubuntu-latest"
@@ -44,6 +44,7 @@ jobs:
       - uses: "actions/setup-python@v4"
         with:
           python-version: "3.11"
-      - run: "pip install -U pip setuptools wheel"
-      - run: "touch template/.tools/requirements/requirements_project.txt"
-      - run: "pip install -r template/.tools/requirements/requirements_cicd.txt"
+      - run: >-
+          pip install -U pip setuptools wheel
+          touch template/.tools/requirements/requirements_project.txt
+          pip install -r template/.tools/requirements/requirements_cicd.txt
