--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,4 +47,4 @@ jobs:
       - run: >-
           pip install -U pip setuptools wheel
           touch template/.tools/requirements/requirements_project.txt
-          pip install -r template/.tools/requirements/requirements_cicd.txt
+      - run: "pip install -r template/.tools/requirements/requirements_cicd.txt"
