--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
       - uses: "actions/setup-python@v4"
         with:
           python-version: "3.11"
+      - run: touch template/.tools/requirements/requirements_project.txt
       - run: >-
           pip install -U pip setuptools wheel
-          touch template/.tools/requirements/requirements_project.txt
-      - run: "pip install -r template/.tools/requirements/requirements_cicd.txt"
+          pip install -r template/.tools/requirements/requirements_cicd.txt
