--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,7 @@ jobs:
       - uses: "actions/setup-python@v4"
         with:
           python-version: "3.11"
+      # Have to touch the file in a separate step before installing requirements
       - run: touch template/.tools/requirements/requirements_project.txt
       - run: >-
           pip install -U pip setuptools wheel
