--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,49 @@
 # * -------------------------------------------------------------------------------- * #
+# * PROJECT-SPECIFIC
+
+# Be sure to override .gitignore in the template questions before putting anything here.
+
+## * -------------------------------------------------------------------------------- * #
+# * TEMPLATE-SPECIFIC
+# *
+
+# Exclude type stubs from search results in VSCode
+typings
+# To avoid committing profiler results
+*.prof
+# To avoid committing rejected changes upon bumping template
+*.rej
+# Don't commit this duplicate of our answers. It's only used once on project creation.
+.copier-answers-init.yml
+# Don't commit code workspace files, which might be symlinked here
+*.code-workspace
+# Avoid committing local docs builds for previewing
+_site
+
+# * -------------------------------------------------------------------------------- * #
+# * Partial Node.gitignore
+# *
+# * https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore
+
+# NPM/Node.JS because of Pyright CI/CD dependency
+node_modules/
+
+# * -------------------------------------------------------------------------------- * #
+# * Modifications to the below Python.gitignore
+# *
+# * https://raw.githubusercontent.com/github/gitignore/master/Python.gitignore
+
+
+# IPython
+.ipython/profile_default/*
+!.ipython/profile_default/startup/
+.ipython/profile_default/startup/README
+ipython_config.py
+
+
+# * -------------------------------------------------------------------------------- * #
+# * Modified Python.gitignore
+# *
 # * https://raw.githubusercontent.com/github/gitignore/master/Python.gitignore
 
 # Byte-compiled / optimized / DLL files
@@ -81,12 +126,6 @@ target/
 # Jupyter Notebook
 .ipynb_checkpoints
 
-# IPython
-.ipython/profile_default/*
-!.ipython/profile_default/startup/
-.ipython/profile_default/startup/README
-ipython_config.py
-
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
@@ -99,7 +138,22 @@ ipython_config.py
 #   install all needed dependencies.
 #Pipfile.lock
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+# poetry
+#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
+#   This is especially recommended for binary packages to ensure reproducibility, and is more
+#   commonly ignored for libraries.
+#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
+#poetry.lock
+
+# pdm
+#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
+#pdm.lock
+#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
+#   in version control.
+#   https://pdm.fming.dev/#use-with-ide
+.pdm.toml
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 
 # Celery stuff
@@ -110,7 +164,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-./.env
+.env
 .venv
 env/
 venv/
@@ -141,3 +195,10 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# PyCharm
+#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
+#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
+#  and can be added to the global gitignore or merged into this file.  For a more nuclear
+#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
+#.idea/
