--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,7 @@ repos:
     rev: "v4.4.0"
     hooks:
       - id: end-of-file-fixer
+        exclude: template/{{ _copier_conf.answers_file }}.jinja
       - id: trailing-whitespace
   - repo: https://github.com/PyCQA/autoflake
     rev: "v2.0.0"
