--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
     rev: "v4.4.0"
     hooks:
       - id: end-of-file-fixer
-        exclude: template/{{ _copier_conf.answers_file }}.jinja
+        exclude: template/{{ _copier_conf\.answers_file }}\.jinja|bump/\.pre-commit-config\.yaml
       - id: trailing-whitespace
   - repo: https://github.com/PyCQA/autoflake
     rev: "v2.0.0"
