--- a/bump/.pre-commit-config.yaml
+++ b/bump/.pre-commit-config.yaml
@@ -58,7 +58,7 @@ repos:
     rev: "v0.6.0"
     hooks:
       - id: markdownlint-cli2-fix
-  #{% if use_dvc -%}
+#{% if use_dvc %}  # Don't touch this, it makes an extra newline but it works
   - repo: https://github.com/iterative/dvc
     rev: "2.38.1"
     hooks:
@@ -76,4 +76,5 @@ repos:
         id: dvc-post-checkout
         language_version: python3
         stages:
-          - post-checkout{% endif %}
+          - post-checkout
+#{% endif %}
