--- a/copier.yml
+++ b/copier.yml
@@ -40,7 +40,18 @@ python_version:
   help: This project will only support a Python version at least this high.
   default: "3.11"
 
+# * -------------------------------------------------------------------------------- # *
+# * ADVANCED
+
+advanced:
+  type: bool
+  help: Do you want to answer advanced questions?
+  default: no
+
+# Advanced
+
 actions_runner:
+  when: "{{ advanced }}"
   type: str
   help: "Which GitHub Actions runner should be used?"
   choices:
@@ -50,14 +61,25 @@ actions_runner:
   default: "ubuntu-latest"
 
 include_funding:
+  when: "{{ advanced }}"
   type: bool
   help: "Include GitHub Sponsors link for {{ project_owner_github_username }}?"
   default: no
 
 use_dvc:
+  when: "{{ advanced }}"
   type: bool
   help: "Use the Data Version Control package? If yes, make sure you also add the dependency to your project manually, so that it may be updated independently from this template."
   default: no
+
+docs_engine:
+  when: "{{ advanced }}"
+  type: str
+  help: "Which documentation engine should be used?"
+  choices:
+    - "MyST"
+    - "Jupyter Book"
+  default: "MYST"
 
 # * -------------------------------------------------------------------------------- # *
 # * OVERRIDES
