--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,9 @@ jobs:
           python-version: "3.11"
       # Have to touch the file in a separate step before installing requirements
       - run: touch template/.tools/requirements/requirements_project.txt
+      - run: touch template/.tools/requirements/requirements_docs.txt
       - run: |-
           pip install -U pip setuptools wheel
           pip install -r template/.tools/requirements/requirements_cicd.txt
+      - run: "pip install -r template/.tools/requirements/{% if docs_engine == 'Jupyter Book' %}requirements_docs copy.txt{% endif %}"
+      - run: "template/.tools/requirements/{% if docs_engine == 'MyST' %}requirements_docs.txt{% endif %}"
