--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,5 +43,5 @@ jobs:
       - run: |-
           pip install -U pip setuptools wheel
           pip install -r template/.tools/requirements/requirements_cicd.txt
-      - run: "pip install -r template/.tools/requirements/{% if docs_engine == 'Jupyter Book' %}requirements_docs copy.txt{% endif %}"
-      - run: "template/.tools/requirements/{% if docs_engine == 'MyST' %}requirements_docs.txt{% endif %}"
+      - run: "pip install -r 'template/.tools/requirements/{% if docs_engine == 'Jupyter Book' %}requirements_docs copy.txt{% endif %}'"
+      - run: "pip install -r 'template/.tools/requirements/{% if docs_engine == 'MyST' %}requirements_docs.txt{% endif %}'"
