--- a/renovate.json
+++ b/renovate.json
@@ -3,10 +3,10 @@
   "extends": [
     "config:base",
     "group:allNonMajor",
-    ":preserveSemverRanges",
-    ":enablePreCommit"
+    ":automergeAll",
+    ":enablePreCommit",
+    ":preserveSemverRanges"
   ],
-  "automerge": true,
   "enabledManagers": ["pip_requirements", "github-actions", "pre-commit"],
   "pip_requirements": {
     "fileMatch": ["^template/\\.tools/requirements/*"]
