--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -184,7 +184,7 @@
 
   //* MD
   "[markdown]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.defaultFormatter": "DavidAnson.vscode-markdownlint",
     "editor.wordWrap": "wordWrapColumn",
     //? Roughly matches the width of GitHub Markdown
     "editor.wordWrapColumn": 124,
