Run the update script on folder open

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -53,6 +53,9 @@
       "command": "pwsh",
       "args": ["update.ps1"],
       "icon": { "id": "folder" },
+      "runOptions": {
+        "runOn": "folderOpen"
+      },
       "problemMatcher": []
     },
 
