--- a/template/.tools/requirements/requirements_both.txt
+++ b/template/.tools/requirements/requirements_both.txt
@@ -2,32 +2,32 @@
 -r requirements_project.txt
 
 # Bump
-toml~=0.10.2
+toml==0.10.2
 
 # Build
-flit~=3.8.0
+flit==3.8.0
 
 # Type checking
 pyright==1.1.295
 
 # Type checking dependencies
-IPython~=8.10.0
+IPython==8.10.0
 
 # Lint
-flake8~=6.0.0
-flake8-absolute-import~=1.0.0.1
-flake8-bandit~=4.1.1
-flake8-black~=0.3.3
-flake8-builtins~=2.1.0
-flake8-bugbear~=23.2.13
-flake8-comprehensions~=3.10.0
-flake8-fixme~=1.1.1
-flake8-noqa~=1.3.0
-pep8-naming~=0.13.2
+flake8==6.0.0
+flake8-absolute-import==1.0.0.1
+flake8-bandit==4.1.1
+flake8-black==0.3.3
+flake8-builtins==2.1.0
+flake8-bugbear==23.2.13
+flake8-comprehensions==3.10.0
+flake8-fixme==1.1.1
+flake8-noqa==1.3.0
+pep8-naming==0.13.2
 
 # Test
-pytest~=7.2.0
-pytest-cov~=4.0.0
+pytest==7.2.0
+pytest-cov==4.0.0
 
 # Document
 -r requirements_docs.txt
