--- a/template/.tools/requirements/requirements_dev.txt
+++ b/template/.tools/requirements/requirements_dev.txt
@@ -5,8 +5,11 @@ ipympl==0.9.3
 # Debug
 debugpy==1.6.6
 
-# For `python` and `ipython` via `pythonrc.py`
+# For `python` via `pythonrc.py`
 rich==13.3.1
+
+# Terminal experiments
+ipython==8.11.0
 
 # Format
 autoflake==2.0.1
