Remove most overrides

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,7 @@
     "*.tsx": "${capture}.ts",
     "tsconfig.json": "tsconfig.*.json",
     "package.json": "package-lock.json, yarn.lock",
-    ".nest_tools_config": "*.ps1.jinja, {{ _copier_conf.answers_file }}.jinja, *{% endif %}.jinja, .gitmodules, pythonrc.py, renovate.json.jinja",
+    ".nest_tools_config": "{{ _copier_conf.answers_file }}.jinja, coverage.xml*, setup.ps1*, update.ps1*, *.code-workspace, *.prof, .copier-answers.yml*, .coverage*, .coveragerc*, .env*, .flake8*, .gitattributes*, .gitmodules*, .isort.cfg*, .markdownlint.yaml*, .pre-commit-config.yaml*, .pytest_cache*, .sourcery.yaml*, codecov.yml*, pyrightconfig.json*, pytest.ini*, pythonrc.py*, renovate.json*",
     ".nest_md": "*.md, *.md.jinja, LICENSE.jinja",
     ".nest_tools_config_top": "coverage.xml, setup.ps1, update.ps1, *.code-workspace, *.prof, .copier-answers.yml, .coverage, .coveragerc, .env, .flake8, .gitattributes, .gitmodules, .isort.cfg, .markdownlint.yaml, .pre-commit-config.yaml, .pytest_cache, .sourcery.yaml, codecov.yml, pyrightconfig.json, pytest.ini, pythonrc.py, renovate.json",
     ".nest_md_top": "*.md, LICENSE"
@@ -31,17 +31,15 @@
   "files.associations": {
     ".nest_md": "plaintext",
     ".nest_tools_config": "plaintext",
-    "*.coveragerc*.jinja": "ini",
-    "*.env*.jinja": "dotenv",
-    "*.flake8*.jinja": "ini",
     "*.gitignore*": "ignore",
-    "*.isort.cfg*": "ini",
-    "*.json*.jinja": "jsonc",
+    "*.ini.jinja": "ini",
     "*.ps1.jinja": "powershell",
-    "*.pylintrc*.jinja": "ini",
-    "**/.github/workflows/*.yaml*.jinja": "yaml",
-    "**/.github/workflows/*.yml*.jinja": "yaml",
-    "*pyrightconfig.json*.jinja": "jsonc",
+    // "*.json*.jinja": "jsonc",
+    // "*.ps1.jinja": "powershell",
+    // "*.pylintrc*.jinja": "ini",
+    // "**/.github/workflows/*.yaml*.jinja": "yaml",
+    // "**/.github/workflows/*.yml*.jinja": "yaml",
+    // "*pyrightconfig.json*.jinja": "jsonc",
     // Project-specific
     ".coveragerc": "ini",
     ".env": "dotenv",
