--- a/template/.vscode/settings.json
+++ b/template/.vscode/settings.json
@@ -7,6 +7,8 @@
   // * -------------------------------------------------------------------------- * //
   // * GENERAL * //
 
+  //! Touch
+
   "task.allowAutomaticTasks": "on",
 
   // Environment variables don't load properly otherwise
