--- a/renovate.json
+++ b/renovate.json
@@ -9,12 +9,16 @@
   ],
   "enabledManagers": ["pip_requirements", "github-actions", "pre-commit"],
   "pip_requirements": {
+    "description": "Override default detection of other requirements files.",
+    "includePaths": ["^template/\\.tools/requirements/*"],
     "fileMatch": ["^template/\\.tools/requirements/*"]
   },
   "github-actions": {
+    "description": "Additionally monitor these files",
     "fileMatch": ["^template/\\.github/workflows/*"]
   },
   "pre-commit": {
+    "description": "Additionally monitor these files",
     "fileMatch": ["^bump/\\.pre-commit-config\\.yaml$"]
   }
 }
