I don't think it takes re2

--- a/renovate.json
+++ b/renovate.json
@@ -10,7 +10,7 @@
   "enabledManagers": ["pip_requirements", "github-actions", "pre-commit"],
   "pip_requirements": {
     "description": "Override default detection of other requirements files.",
-    "includePaths": ["^template/\\.tools/requirements/*"],
+    "includePaths": ["template/.tools/requirements"],
     "fileMatch": ["^template/\\.tools/requirements/*"]
   },
   "github-actions": {
