Ignore upstream deprecation warning

--- a/template/.env
+++ b/template/.env
@@ -1,2 +1,2 @@
 PYTHONSTARTUP=pythonrc.py
-PYTHONWARNINGS=default
+PYTHONWARNINGS=default,ignore:Creating a LegacyVersion has been deprecated and will be removed in the next major release:DeprecationWarning:pip._vendor.packaging.version
