--- a/template/.vscode/settings.json
+++ b/template/.vscode/settings.json
@@ -160,6 +160,12 @@
 
   //! Filetype specifics (incl. line width)
 
+  //* .ENV
+  "[dotenv]": {
+    "editor.wordWrap": "wordWrapColumn",
+    "rewrap.autoWrap.enabled": false
+  },
+
   //* IPYNB
   "[ipynb]": {
     "editor.defaultFormatter": "ms-python.black-formatter"
