--- a/bump/.pre-commit-config.yaml
+++ b/bump/.pre-commit-config.yaml
@@ -20,19 +20,14 @@ repos:
     hooks:
       - id: end-of-file-fixer
       - id: trailing-whitespace
-  - repo: https://github.com/PyCQA/autoflake
-    rev: "v2.0.1"
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: "v0.0.245"
     hooks:
-      - id: autoflake
-        args: [-i, --remove-all-unused-imports, --ignore-init-module-imports]
+      - id: ruff
   - repo: https://github.com/psf/black
     hooks:
       - id: black
     rev: "23.1.0"
-  - repo: https://github.com/PyCQA/isort
-    rev: "5.12.0"
-    hooks:
-      - id: isort
   - repo: https://github.com/srstevenson/nb-clean
     rev: "2.4.0"
     hooks:
@@ -44,11 +39,6 @@ repos:
           - slideshow
           - special
           - --
-  - repo: https://github.com/asottile/pyupgrade
-    rev: "v3.3.1"
-    hooks:
-      - id: pyupgrade
-        args: ["--py{{ python_version | replace('.', '') }}-plus"]
   - repo: https://github.com/asottile/blacken-docs
     rev: "1.13.0"
     hooks:
@@ -58,7 +48,7 @@ repos:
     rev: "v0.6.0"
     hooks:
       - id: markdownlint-cli2-fix
-#{% if use_dvc %}  # Don't touch this, it makes an extra newline but it works
+  #{% if use_dvc %}  # Don't touch this, it makes an extra newline but it works
   - repo: https://github.com/iterative/dvc
     rev: "2.45.1"
     hooks:
