--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,3 @@
-[build-system]
-requires = ["flit_core >=3.3,<4"]
-build-backend = "flit_core.buildapi"
-
-[project]
-name = "{{ project_name }}"
-requires-python = ">={{ python_version }}"
-dependencies = []
-readme = "README.md"
-dynamic = ["version", "description"]
-[[project.authors]]
-name = "{{ project_owner_name }}"
-email = "{{ project_email }}"
-
-[project.urls]
-Home = "https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}"
-
-[project.optional-dependencies]
-
 [tool.ruff]
 fix = true
 select = ["ALL"]
@@ -35,6 +16,7 @@ ignore = [
 ]
 
 [tool.ruff.flake8-bugbear]
+# So B008 doesn't complain about Typer constructs
 extend-immutable-calls = ["typer.Argument", "typer.Option"]
 
 [tool.ruff.pep8-naming]
