--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,7 +14,6 @@
     // * GIT * //
     {
       "label": "git: Rebase back to fork",
-      "type": "process",
       "command": "pwsh",
       "args": ["-Command", "git rebase -i --fork-point main"],
       "icon": { "id": "git-branch" },
@@ -22,7 +21,6 @@
     },
     {
       "label": "git: Stage all files",
-      "type": "process",
       "command": "pwsh",
       "args": ["-Command", "git add -A"],
       "icon": { "id": "git-branch" },
@@ -33,7 +31,6 @@
     // * PROJECT SETUP * //
     {
       "label": "setup: Initialize template",
-      "type": "process",
       "command": "pwsh",
       "args": [".tools/scripts/init_template.ps1"],
       "icon": { "id": "folder" },
@@ -41,7 +38,6 @@
     },
     {
       "label": "setup: Setup project",
-      "type": "process",
       "command": "pwsh",
       "args": ["setup.ps1"],
       "icon": { "id": "folder" },
@@ -49,7 +45,6 @@
     },
     {
       "label": "setup: Update project",
-      "type": "process",
       "command": "pwsh",
       "args": ["update.ps1"],
       "icon": { "id": "folder" },
@@ -60,7 +55,6 @@
     // * PRE-COMMIT * //
     {
       "label": "pre-commit",
-      "type": "process",
       "command": "pwsh",
       "args": ["-Command", "pre-commit"],
       "icon": { "id": "git-commit" },
@@ -71,8 +65,15 @@
     // * OTHER TASKS * //
 
     {
+      "label": "task: format notebook",
+      "command": "pwsh",
+      "args": ["-Command", "nbqa black ${file}; nbqa ruff --fix-only ${file}"],
+      "icon": { "id": "notebook" },
+      "presentation": { "close": true },
+      "problemMatcher": []
+    },
+    {
       "label": "task: sphinx-autobuild docs (preview)",
-      "type": "process",
       "command": "pwsh",
       "args": ["-Command", "sphinx-autobuild docs _site"],
       "icon": { "id": "book" },
@@ -80,7 +81,6 @@
     },
     {
       "label": "task: snakeviz",
-      "type": "process",
       "command": "pwsh",
       "args": ["-Command", "snakeviz .prof"],
       "icon": { "id": "graph-line" },
@@ -88,7 +88,6 @@
     },
     {
       "label": "task: autoflake current file",
-      "type": "process",
       "command": "pwsh",
       "args": [
         "-Command",
@@ -99,7 +98,6 @@
     },
     {
       "label": "task: pytest-cov: Generate coverage",
-      "type": "process",
       "command": "pwsh",
       "args": ["-Command", "pytest --cov --cov-report xml"],
       "icon": { "id": "beaker" },
@@ -107,7 +105,6 @@
     },
     {
       "label": "task: Remove *.rej",
-      "type": "process",
       "command": "pwsh",
       "args": [
         "-Command",
@@ -118,7 +115,6 @@
     },
     {
       "label": "task: black: Ignore magic comma in this file",
-      "type": "process",
       "command": "pwsh",
       "args": ["-Command", "black -C ${file}"],
       "icon": { "id": "code" },
@@ -126,7 +122,6 @@
     },
     {
       "label": "task: black: Ignore magic comma in all project files",
-      "type": "process",
       "command": "pwsh",
       "args": ["-Command", "black -C src tests"],
       "icon": { "id": "code" },
